<resources>
    <string name="app_name">Overwatch Raw Sound Files</string>
    <string name="bastion_portrait">Bastion portrait</string>
    <string name="d_va_portrait">D.Va portrait</string>
    <string name="genji_portrait">Genji portrait</string>
    <string name="hanzo_portrait">Hanzo portrait</string>
    <string name="junkrat_portrait">Junkrat portrait</string>
    <string name="lucio_portrait">Lucio portrait</string>
    <string name="mei_portrait">Mei portrait</string>
    <string name="mccree_portrait">McCree portrait</string>
    <string name="mercy_portrait">Mercy portrait</string>
    <string name="pharah_portrait">Pharah portrait</string>
    <string name="reaper_portrait">Reaper portrait</string>
    <string name="reinhardt_portrait">Reinhardt portrait</string>
    <string name="roadhog_portrait">Roadhog portrait</string>
    <string name="soldier_76_portrait">Soldier: 76 portrait</string>
    <string name="tracer_portrait">Tracer portrait</string>
    <string name="widowmaker_portrait">Widowmaker portrait</string>
    <string name="torbjorn_portrait">Torbjorn portrait</string>
    <string name="zenyatta_portrait">Zenyatta portrait</string>
    <string name="zarya_portrait">Zarya portrait</string>
    <string name="winston_portrait">Winston portrait</string>
    <string name="symmetra_portrait">Symmetra portrait</string>
    <string name="enter_name_text_view">Enter your name</string>
    <string name="enter_name_button">Enter</string>
    <string name="calling_activity_message">The calling activity was</string>
    <string name="go_get_the_name">Go get the name</string>
    <string name="go_get_it_button">Go get it</string>
    <string name="users_name_sent_back">The users name was</string>
    <string name="hero_page_name">Hero Page</string>
    <string name="back_button_text">Back</string>
    <string name="files_16">Files 16001-17000</string>
    <string name="files_17">Files 17001-18000</string>
    <string name="files_18">Files 18001-19000</string>
    <string name="files_15">Files 15001-16000</string>
    <string name="files_13">Files 13001-14000</string>
    <string name="files_14">Files 14001-15000</string>
    <string name="files_12">Files 12001-13000</string>
    <string name="files_11">Files 11001-12000</string>
    <string name="files_10">Files 10001-11000</string>
    <string name="files_8">Files 8001-9000</string>
    <string name="files_9">Files 9001-10000</string>
    <string name="files_7">Files 7001-8000</string>
    <string name="files_5">Files 5001-6000</string>
    <string name="files_4">Files 4001-5000</string>
    <string name="files_6">Files 6001-7000</string>
    <string name="files_0">Files 1-1000</string>
    <string name="files_1">Files 1001-2000</string>
    <string name="files_2">Files 2001-3000</string>
    <string name="files_3">Files 3001-4000</string>
</resources>
